--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^22.7.5",
     "gts": "^6.0.2",
+    "node-fetch": "^3.3.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
