--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "clean": "gts clean",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "lint": "gts lint",
     "compile": "tsc",
     "fix": "gts fix",
@@ -18,12 +18,21 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@tsconfig/node22": "^22.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.5",
     "gts": "^6.0.2",
+    "jest": "^29.7.0",
     "node-fetch": "^3.3.2",
+    "ts-jest": "^29.3.3",
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@netlify/functions": "^3.1.8"
+    "@netlify/functions": "^3.1.8",
+    "axios": "^1.9.0"
+  },
+  "engines": {
+    "node": "22.*"
   }
 }
