--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest": "^29.7.0",
     "node-fetch": "^3.3.2",
     "ts-jest": "^29.3.3",
+    "ts-mockito": "^2.6.1",
     "typescript": "^5.6.3"
   },
   "dependencies": {
